Added logging base with logback